--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-auth-kit": "^3.0.2-alpha.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.1",
