--- a/package.json
+++ b/package.json
@@ -2,38 +2,85 @@
   "name": "react",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "buildv": "vite build",
+    "linto": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@mui/material": "^5.15.1",
     "aos": "^2.3.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@inovua/reactdatagrid-community": "^5.10.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.35",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "apexcharts": "^3.45.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
+    "react-scripts": "5.0.1",
     "react-apexcharts": "^1.4.1",
     "react-auth-kit": "^3.0.2-alpha.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-ios-pwa-prompt": "^1.8.4",
+    "react-redux": "^8.1.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.0",
+    "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
     "recharts": "^2.10.3",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "workbox-background-sync": "^6.6.0",
+    "workbox-broadcast-update": "^6.6.0",
+    "workbox-cacheable-response": "^6.6.0",
+    "workbox-core": "^6.6.0",
+    "workbox-expiration": "^6.6.0",
+    "workbox-google-analytics": "^6.6.0",
+    "workbox-navigation-preload": "^6.6.0",
+    "workbox-precaching": "^6.6.0",
+    "workbox-range-requests": "^6.6.0",
+    "workbox-routing": "^6.6.0",
+    "workbox-strategies": "^6.6.0",
+    "workbox-streams": "^6.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "autoprefixer": "^10.4.14"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
