--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@mui/material": "^5.15.1",
-    "aos": "^2.3.4",
+    "@auth-kit/react-router": "^3.0.2-alpha.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@inovua/reactdatagrid-community": "^5.10.2",
+    "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,12 +27,12 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "aos": "^2.3.4",
     "apexcharts": "^3.45.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-apexcharts": "^1.4.1",
     "react-auth-kit": "^3.0.2-alpha.1",
     "react-bootstrap": "^2.9.1",
@@ -41,12 +41,13 @@
     "react-redux": "^8.1.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.0",
+    "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "recharts": "^2.10.3",
     "styled-components": "^6.1.6",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
     "workbox-cacheable-response": "^6.6.0",
