--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-auth-kit": "^3.0.2-alpha.1",
-    "react-bootstrap": "^2.9.1",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-redux": "^8.1.0",
     "react-router": "^6.21.1",
@@ -46,6 +47,7 @@
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
     "styled-components": "^6.1.6",
+    "sweetalert2": "^11.10.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
